decafcomp/llvm/test/aqs-7.llvm
; ModuleID = 'QuickSort'

define void @quickSort(i32, i32) {
entry:
  %left = alloca i32
  %right = alloca i32
  store i32 %0, i32* %left
  store i32 %1, i32* %right
  %right1 = load i32, i32* %right
  %left2 = load i32, i32* %left
  %SubTmp = sub i32 %right1, %left2
  %LEQTmp = icmp sle i32 %SubTmp, 0
  %IfCond = icmp eq i1 %LEQTmp, true
  br i1 %IfCond, label %Then, label %Else

Then:                                             ; preds = %entry
  ret void
  br label %IfCont
  ret void
}
